# ProjetoPds

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  router.py  session.py
app/config/: __init__.py  logger.py  middleware.py  model_base.py  settings.py  swagger.py
app/controllers/: __init__.py  audio_controller.py  auth_controller.py  comment_controller.py  controller.py  post_controller.py  user_controller.py
app/dependencies/: __init__.py  auth_guard.py
app/exceptions/: __init__.py  base_exception.py  conflict_exception.py  forbidden_exception.py  invalid_credentials_exception.py  not_found_exception.py  unauthorized_exception.py  upload_audio_exception.py
app/facade/: __init__.py  audio_inference_facade.py
app/factories/: __init__.py  logger_factory.py
app/helpers/: __init__.py  auth_token.py  password_hash.py
app/infrastructure/: __init__.py  model_downloader.py  update_techrepo.py
app/middlewares/: database_session.py  exception_handler.py
app/models/: __init__.py  audio_model.py  comment_model.py  post_audio_model.py  post_model.py  user_follower_model.py  user_model.py
app/repositories/: __init__.py  abstract_repository.py  audio_repository.py  comment_repository.py  post_repository.py  repository.py  user_repository.py
app/schemas/: __init__.py  audio_schema.py  auth_schema.py  comment_schema.py  post_schema.py  user_schema.py
app/services/: __init__.py  audio_service.py  auth_service.py  comment_service.py  post_service.py  (+1 more)
(+6 files in other folders)
